# mycode

jacknero/: .viminfo  .vimrc  _vim  svn-commit.tmp
jacknero/dotfiles/: .bashrc  .emacs  .screenrc  .vimrc  .zshrc
jacknero/dotfiles/.cdd/.svn/: all-wcprops  entries
jacknero/dotfiles/.svn/: all-wcprops  entries
jacknero/dotfiles/.svn/text-base/: .bash_history.svn-base  .screenrc.svn-base  .vimrc.svn-base  .zshrc.svn-base
jacknero/dotfiles/.vim/: test.rb
jacknero/dotfiles/.vim/.svn/: all-wcprops
jacknero/dotfiles/.vim/doc/: errormarker.txt  refe.txt  tags
jacknero/misc/: gtags.conf
jacknero/src/: svn-commit.tmp  test.rb
jacknero/src/actionscript/: BeatTimer.as  HelloWorld.as  HelloWorld.swf
jacknero/src/actionscript/.svn/: all-wcprops  entries
jacknero/src/actionscript/CubeRotation/: Cube.as  Cube.swf
jacknero/src/actionscript/SoundSpectLum/: .BasicAnalyzer.as.swp  BasicAnalyzer.as  BasicAnalyzer.swf  SoundMixer_stopAllExample.as  SoundMixer_stopAllExample.swf  Test.as
jacknero/src/air/.svn/: all-wcprops  entries
jacknero/src/air/Hello/: Hello-app.xml
jacknero/src/assembler/: ex1  ex1.s  ex2  ex2.s
jacknero/src/c/: a.out
jacknero/src/c#/: Program.cs
jacknero/src/c++/: Cstruct1.cpp  HelloWorld  HelloWorld.cpp  Helloworld1  Helloworld1.cpp  Test  Test.cpp
jacknero/src/c++/Boost/asio/: CMakeCache.txt  CMakeLists.txt  ImageReadWrite  Makefile  cmake_install.cmake  test.cxx
jacknero/src/c++/Boost/test/: CMakeCache.txt  CMakeLists.txt  ImageReadWrite  Makefile  cmake_install.cmake  test.cxx
jacknero/src/erlang/: hoge.beam  hoge.erl  sample.beam  sample.erl  test.erl
jacknero/src/flex/: AirTest1.mxml  AirTest1.swf  MyFirst.mxml  TestGrid.mxml
jacknero/src/gaushe/: hello_world.scm
jacknero/src/gdb/: Helloworld.c  a.out  test.c
jacknero/src/itk/: Code  tags.bak
jacknero/src/itk/3D_ImageRegistration4_M/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
jacknero/src/itk/3D_ImageRegistration4_M/.svn/: all-wcprops  entries
jacknero/src/itk/3D_ImageRegistration4_M/.svn/text-base/: CMakeCache.txt.svn-base  CMakeLists.txt.svn-base  ImageRegistration8.cxx.svn-base
jacknero/src/itk/DeformableRegistration12/: CMakeCache.txt  CMakeLists.txt  DeformableRegistration12.cxx  Makefile  README  cmake_install.cmake
jacknero/src/itk/OutPutDeformableField/: CMakeCache.txt  CMakeLists.txt  Makefile  OutPutDeformableField.cxx  cmake_install.cmake
jacknero/src/itk/itkReadITKImageShowVTK/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  Makefile  cmake_install.cmake  itkReadITKImageShowVTK.cxx
jacknero/src/java/: #hellow.java#  Hellow.java
jacknero/src/nasm/: Hello  Hello.asm
jacknero/src/objective-c/: a.out  main.m  test.m
jacknero/src/perl/: hello.pl  hello.pl~
jacknero/src/reader/: lung0001.pic  reader_file.cpp
jacknero/src/ruby/: #env.rb#  1_100.rb  Fuzibizz.rb  FuzzyBizz_1.rb  FuzzyBizz_2.rb  activerecord.rb  array_test1.rb  bench.rb  env.rb  exec.rb  exec_systemprogram.rb  hellow.rb  hellow.rb~  multiple_of_5.rb  multiple_of_5_1.rb  platform.rb  popen3.rb  recoomender.sql
jacknero/src/top_coder/: FixedPointTheorem.cpp  ImageDithering.cpp  IngredientProportions.cpp  Inventory.cpp  LinearPolyominoCovering  LinearPolyominoCovering.cpp  MostProfitable.cpp  MostProfitable.cpp.bak  SubrectanglesOfTable.cpp  Time.cpp.bak  a.out
(+1499 files in other folders)
